--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-flask==3.0.0
+flask==2.3.0
 flask-cors==4.0.0
-opencv-python-headless==4.8.1.78
+opencv-python==4.8.0.74
 numpy==1.24.3
-gunicorn==21.2.0
