--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-flask==2.3.0
-flask-cors==4.0.0
-opencv-python==4.8.0.74
-numpy==1.24.3
+Flask==3.0.3
+opencv-python==4.10.0.84
+numpy==2.0.2
+gunicorn==21.2.0
