--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-Flask==3.0.3
-opencv-python==4.10.0.84
-numpy==2.0.2
+flask==3.0.0
+flask-cors==4.0.0
+opencv-python-headless==4.8.1.78
+numpy==1.24.3
 gunicorn==21.2.0
